<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_detail"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <RelativeLayout
        android:id="@+id/detail"
        android:layout_width="match_parent"
        android:layout_height="180dp"
        android:padding="16dp">

        <ImageView
            android:id="@+id/iv_emblem"
            android:layout_width="180dp"
            android:layout_height="180dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="26dp"
            android:layout_marginBottom="20dp"
            android:scaleType="fitXY"
            tools:src="@tools:sample/avatars" />

        <TextView
            android:id="@+id/tv_emblem"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/iv_emblem"
            android:text="@string/emblem"
            android:textStyle="bold"
            android:layout_marginStart="41dp"/>

        <ImageView
            android:id="@+id/iv_flag"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="20dp"
            android:scaleType="fitXY"
            tools:src="@tools:sample/avatars" />

        <TextView
            android:id="@+id/tv_country_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:layout_marginBottom="6dp"
            android:layout_toEndOf="@id/iv_emblem"
            android:text="@string/countries_name"
            android:textSize="16sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tv_country"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/tv_country_title"
            android:layout_marginBottom="12dp"
            android:layout_toEndOf="@id/iv_emblem"
            tools:text="@tools:sample/cities" />

        <TextView
            android:id="@+id/tv_day"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/tv_country"
            android:layout_marginBottom="6dp"
            android:layout_toEndOf="@id/iv_emblem"
            android:text="@string/day"
            android:textSize="16sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tv_date"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/tv_day"
            android:layout_marginBottom="12dp"
            android:layout_toEndOf="@id/iv_emblem"
            tools:text="@tools:sample/date/ddmmyy" />

        <TextView
            android:id="@+id/tv_capital_city_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/tv_date"
            android:layout_marginBottom="6dp"
            android:layout_toEndOf="@id/iv_emblem"
            android:text="@string/capital_title"
            android:textSize="16sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tv_capital_city"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/tv_capital_city_title"
            android:layout_marginBottom="12dp"
            android:layout_toEndOf="@id/iv_emblem"
            tools:text="@tools:sample/lorem" />

        <TextView
            android:id="@+id/tv_history_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/tv_emblem"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="10dp"
            android:text="@string/history_title"
            android:textSize="18sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tv_history"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/tv_history_title"
            tools:text="@tools:sample/lorem/random" />
    </RelativeLayout>

</ScrollView>