<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/cv_country"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginLeft="16dp"
    android:layout_marginTop="16dp"
    android:layout_marginRight="16dp"
    android:layout_marginBottom="6dp"
    android:clickable="true"
    android:focusable="true"
    android:foreground="?selectableItemBackground"
    app:cardCornerRadius="5dp">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="6dp">

        <androidx.cardview.widget.CardView
            android:id="@+id/id_img"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="15dp"
            android:layout_marginBottom="3dp">

            <ImageView
                android:id="@+id/iv_flag"
                android:layout_width="142dp"
                android:layout_height="97dp"
                android:scaleType="fitXY"
                tools:src="@tools:sample/avatars" />
        </androidx.cardview.widget.CardView>

        <LinearLayout
            android:layout_width="205dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="-5dp"
            android:layout_toEndOf="@+id/id_img"
            android:orientation="vertical"
            android:padding="6dp">

            <TextView
                android:id="@+id/tv_country"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="12dp"
                android:layout_marginTop="5dp"
                android:textSize="16sp"
                android:textStyle="bold"
                tools:text="@tools:sample/cities" />

            <TextView
                android:id="@+id/tv_day"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="4dp"
                android:text="@string/day"
                android:textSize="12sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tv_date"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="4dp"
                android:text="@string/day"
                android:textSize="12sp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/btn_favorite"
                    style="@style/Widget.MaterialComponents.Button"
                    android:layout_width="84dp"
                    android:layout_height="45dp"
                    android:layout_marginEnd="10dp"
                    android:layout_marginBottom="6dp"
                    android:text="@string/favorite"
                    android:textAppearance="@style/Widget.MaterialComponents.Button"
                    android:textSize="14sp"
                    android:textStyle="bold"
                    app:cornerRadius="6dp" />

                <Button
                    android:id="@+id/btn_share"
                    style="@style/Widget.MaterialComponents.Button"
                    android:layout_width="wrap_content"
                    android:layout_height="45dp"
                    android:text="@string/share"
                    android:textAppearance="@style/Widget.MaterialComponents.Button"
                    android:textSize="14sp"
                    android:textStyle="bold"
                    app:cornerRadius="6dp" />
            </LinearLayout>

        </LinearLayout>
    </RelativeLayout>


    <ImageView
        android:id="@+id/iv_emblem"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:visibility="invisible"
        tools:src="@tools:sample/avatars" />

    <TextView
        android:id="@+id/tv_history"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:maxLines="2"
        android:textSize="12sp"
        android:visibility="invisible"
        tools:text="@tools:sample/lorem/random" />

    <TextView
        android:id="@+id/tv_capital_city"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:maxLines="2"
        android:textSize="12sp"
        android:visibility="invisible"
        tools:text="@tools:sample/lorem/random" />

</androidx.cardview.widget.CardView>